# StudyKotlin

./: .gitignore  GitProperties.groovy  build.gradle  gradle.properties  plan.md  public.jks  public.properties  readme.md  settings.gradle
LibKt/: build.gradle
LibKt/SateViewSwitcher/: build.gradle
LibKt/SateViewSwitcher/src/main/: AndroidManifest.xml
LibKt/ViewBindingExt/: build.gradle  proguard-rules.pro
LibKt/ViewBindingExt/src/main/: AndroidManifest.xml
LibKt/src/main/: AndroidManifest.xml
LibKt/src/main/res/layout/: activity_svs_test.xml  fragment_home.xml  fragment_svs_test.xml  fragment_test_list.xml  item_home_test.xml
LibKt/src/main/res/navigation/: mobile_navigation.xml
LibKt/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: ic_baseline_arrow_back_ios_24.xml  shape_bottom_sheet_corner15.xml  shape_circle_accent.xml
app/src/main/res/layout/: activity_data_bind.xml  activity_main.xml  activity_material_theming.xml  activity_simple_motion.xml  activity_transition_animation.xml  activity_transition_detail.xml  activity_transition_list.xml  activity_view_bind.xml  activity_view_large_image.xml  bottom_sheet_test_activity.xml  bottom_sheet_test_fragment.xml  bottom_shett_dialog_image.xml  fragment_home.xml  item_home_test.xml  item_horizontal_transition.xml  (+15 more)
buildSrc/: build.gradle.kts  settings.gradle.kts
buildSrc/src/main/kotlin/: Dependencies.kt  StringExt.kt
git/: .gitignore  build.gradle  plan.md  temp.plan.md
git/app/: build.gradle
git/app/sampledata/: received_events.json
git/app/src/main/: AndroidManifest.xml
git/core/: .gitignore  README.md  build.gradle  proguard-rules.pro
git/core/src/main/: AndroidManifest.xml
git/proto/: build.gradle
git/proto/src/main/: AndroidManifest.xml
git/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
jkid/: build.gradle
study/: .gitignore  build.gradle
study/src/main/: AndroidManifest.xml
study/src/main/cpp/: CMakeLists.txt
study/src/main/cpp/server/: native-mmap-server.cpp
study/src/main/cpp/shm/: SharedMemory.cpp  SharedMemory.h
study/src/main/cpp/test/: native-mmap-test.cpp
study/src/main/cpp/utils/: FileUtils.cpp  FileUtils.h  SlinLog.h
versionPlugin/: build.gradle
(+584 files in other folders)
